# penta-application-screener

./: .clinerules  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SPEC.md  backup-db.ps1  backup-db.sh  dev.ps1  dev.sh  judge.ps1  judge.sh  live-scoring-eval.sh  reset-db.ps1  reset-db.sh  restore-db.ps1  restore-db.sh  setup.ps1  setup.sh
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 21d6cae8aed5_rework_application_status_model.py  265a2a6c616c_create_initial_tables.py  2f0eebed8538_baseline_schema.py  30c9cad8f673_add_eval_runs_table.py  3364cadf6ede_add_estimated_usd_to_run_cost_ledger.py  3ac21f021182_add_sync_run_unchanged_count.py  5d3446b2ca50_baseline_schema.py  6305b4e2d38b_add_prompt_version_to_application_ai_.py  7a35c155cb41_run_cost_ledger.py  7cb3574a5aeb_add_narrative_to_application_ai_results.py  8c2b1295e691_add_dimension_aliases.py  9c0ee540ce8f_squashed_baseline_schema.py  a1b2c3d4e5f6_add_application_stars_table.py  a1f2c3d4e5b6_add_sync_run_settings_fingerprint.py  a1f4c7e29b83_run_pass_cost.py  abcee3148599_add_application_ai_results.py  b2c3d4e5f6a7_add_access_allowlist_table.py  b2e7d9140c56_run_pass_metrics.py  b3e2f9a4c1d7_drop_ranking_runs_owner_user_id.py  c3d4e5f6a7b8_split_ranking_run_into_analysis_and_member_ranking.py  c3f9a82d1b70_add_private_application_notes.py  c84f612585ea_split_ranking_run_criteria_blob.py  d4e5f6a7b8c9_per_member_eligibility.py  d4e9f1a2b3c4_separate_score_current_cost_runs.py  e5a1b2c3d4e5_remove_empty_score_current_passes.py  e5f6a7b8c9d0_per_member_rules.py
backend/app/: __init__.py  main.py
backend/app/ai/: analysis.py  applicant_facts.py  dimension_consolidate.py  dimension_decompose.py  dimension_matching.py  dimension_reconcile.py  dimension_scoring.py  dimension_scoring_cost.py  essay_analysis.py  mock_provider.py  pattern_discovery.py  pool_digest.py  pricing.py  prompt_fragments.py  provider.py  quality_flags.py  schemas.py  score_vectors.py  screening.py  strands_provider.py
backend/app/api/: allowlist.py  applications.py  auth.py  dashboard.py  dependencies.py  essay_analysis.py  evals.py  health.py  insights.py  problems.py  quality_flags.py  ranking.py  screening.py  settings.py  sync.py
backend/app/api/evals/: __init__.py  _categorical.py  _shared.py  cases.py  catalog.py  runs.py
backend/app/api/ranking/: __init__.py  current.py  insights.py  run.py  shortlist.py
backend/app/core/: config.py  google_oauth.py  time.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/domain/: __init__.py  hard_filters.py  ranking.py  status.py
backend/app/evals/: __init__.py  _categorical.py  agreement.py  capture_scores.py  capture_screening.py  case_store.py  consolidate.py  decompose.py  decompose_drift.py  fixture.py  invariants.py  judge.py  live_consolidate.py  live_decompose.py  live_matching.py  live_scoring.py  live_screening.py  matching.py  paths.py  properties.py  reproduce.py  run.py  scoring.py  screening.py  stability.py  synthetic_guard.py
backend/app/schemas/: allowlist.py  applications.py  auth.py  base.py  dashboard.py  evals.py  events.py  insights.py  quality_flags.py  ranking.py  screening.py  settings.py  sync.py
backend/app/services/: allowlist.py  analysis.py  application_import.py  backup.py  cost_report.py  eligibility.py  google_credentials.py  google_sheets.py  metrics.py  ranking_run.py  ranking_view.py  rules.py  screening_run.py  settings.py  stars.py  users.py
backend/config/: initial-admins.example.txt
backend/eval-data/: consolidation_golden.json  decomposition_golden.json  judge_cases.json  matching_golden.json  rank_baseline.json  scoring_golden.json  screening_golden.json
backend/scripts/: _harvest_common.py  analyze_convergence.py  coverage_gate.py  decompose_drift.py  dimension_overlap.py  exp_decompose_bakeoff.py  exp_single_call_discovery.py  fix_decomposer_why.py  harvest_golden_cases.py  harvest_scoring_cases.py  harvest_screening_cases.py  marginal_coverage.py
backend/tests/: test_agreement.py  test_ai_analysis.py  test_allowlist.py  test_application_import.py  test_auth.py  test_backup.py  test_capture_scores.py  test_consolidate_eval.py  test_core_time.py  test_dashboard.py  test_decompose_drift.py  test_decompose_eval.py  test_dimension_consolidate.py  test_dimension_reconcile.py  test_dimension_scoring.py  test_discovery_fanout.py  test_durable_ignore.py  test_eligibility.py  test_essay_analysis.py  test_essay_analysis_api.py  test_eval_cases.py  test_eval_judge.py  test_evals.py  test_evals_api.py  test_google_oauth_config.py  test_hard_filters.py  test_health.py  test_live_consolidate.py  test_live_decompose.py  test_live_matching.py  test_live_scoring.py  test_live_screening.py  test_matching_eval.py  test_quality_flags.py  test_quality_flags_api.py  test_ranking.py  test_ranking_api.py  test_revived_label.py  test_scoring_eval.py  test_screening.py  (+7 more)
(+82 files in other folders)
