[project]
name = "penta-application-screener-backend"
version = "0.1.0"
description = "FastAPI backend for the Penta Application Screener."
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "authlib>=1.7.2",
    "fastapi[standard]>=0.124.0",
    "google-api-python-client>=2.197.0",
    "google-auth>=2.53.0",
    "itsdangerous>=2.2.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.44",
    "strands-agents>=1.44.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.3.0",
    "pytest>=9.0.1",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py313"
# `ruff format` is deliberately NOT adopted: the codebase is already consistently
# hand-formatted, and running the formatter would rewrite ~50 files / ~1500 lines of
# pure style (comprehension/arg-wrap normalization, not just width) — burying git
# blame with no correctness gain. Lint (below) catches the defects; formatting stays
# manual. Adopt the formatter later as its own "format the world" commit if wanted.

[tool.ruff.lint]
# A curated set, not "everything". We enable the rule families that genuinely improve
# THIS codebase and explicitly ignore the ones that fight its stack (FastAPI, Pydantic)
# or its deliberate choices (Unicode math glyphs, long prompt strings). Each ignore
# below is a considered decision, not an oversight.
select = [
    "E4", "E7", "E9", "F",  # default: real defects (unused, misplaced imports, etc.)
    "I",    # import sorting
    "UP",   # pyupgrade: modern syntax for our Python floor
    "C4",   # flake8-comprehensions: drop unnecessary comprehensions/dict()/list()
    "PT",   # flake8-pytest-style: better test idioms (e.g. split composite asserts)
    "RUF",  # Ruff-specific correctness (unused noqa, unused unpacked vars, ...)
]
ignore = [
    # E501 (line length) is intentionally OFF: the AI-prompt modules hold single string
    # lines of 200-800 chars that MUST NOT wrap (wrapping changes the bytes the model
    # sees / forces ugly concatenation). Line length on real code is the formatter's job
    # (`ruff format` leaves strings alone), not a lint gate — so E501 isn't in `select`.
    "B008",     # FastAPI idiom: `= Depends(...)` / `= Query(...)` in arg defaults is correct.
    "RUF012",   # Pydantic deep-copies mutable field defaults per instance; the rule targets plain classes.
    "RUF002",   # Deliberate `×` / `−` (real math glyphs) in formula docstrings — not typos.
    "RUF003",   # Same, in comments.
    "N818",     # Renaming SpendingCapExceeded/Problem to *Error is a public rename not worth the ripple.
    "UP047",    # PEP 695 `def f[T]()` — keep classic TypeVars, consistent with provider.py's SchemaT.
]

[tool.ruff.lint.per-file-ignores]
# `user: User = Depends(require_current_user)` MUST stay in the signature to enforce
# auth even when the body doesn't read it — so unused-argument is wrong for the API layer.
"app/api/*" = ["ARG001"]

